# imageassistant

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  container-command.sh  custom-materialize.scss  docker-compose-prod-dup.yaml  docker-compose-prod.yaml  docker-compose.yaml  package-lock.json  package.json  push-production.sh  pyproject.toml  sitemap_index.xml  tailwind.config.js
.github/workflows/: buid-and-test.yml  deploy.yml  django.yml
.sass-cache/1461515d8e8bfd4c47be22db102c597e5097006d/: _checkboxes.scssc  _file-input.scssc  _forms.scssc  _input-fields.scssc  _radio-buttons.scssc  _range.scssc  _select.scssc  _switches.scssc
.sass-cache/568bfa55e68fab1983be2aea33f872222662e78b/: _badges.scssc  _buttons.scssc  _cards.scssc  _carousel.scssc  _chips.scssc  _collapsible.scssc  _color-classes.scssc  _color-variables.scssc  _datepicker.scssc  _dropdown.scssc  _global.scssc  _grid.scssc  _icons-material-design.scssc  _materialbox.scssc  _modal.scssc  _navbar.scssc  _normalize.scssc  _preloader.scssc  _pulse.scssc  _sidenav.scssc  _slider.scssc  _table_of_contents.scssc  _tabs.scssc  _tapTarget.scssc  _timepicker.scssc  _toast.scssc  _tooltip.scssc  _transitions.scssc  _typography.scssc  _variables.scssc  _waves.scssc
.sass-cache/77febad9bfe130b20a42663c061cd92a2be0d219/: materialize.scssc
.sass-cache/f23256804dbe4f6fa4904097dd0306e39600262b/: custom-materialize.scssc
assets/css/: tailwind.css
celery/: Dockerfile
deploy/: playbook.yml
imageassistant/api/: serializers.py  tests.py  urls.py  views.py
imageassistant/assets/: robots.txt
imageassistant/assets/css/: app.2586430f.css  style.css  (+5 more)
imageassistant/config/: celery.py  forms.py  production_settings.py  settings.py  storage_backends.py  urls.py  views.py
imageassistant/frontend/: Dockerfile  build-script.js  fix-all-imports.js  fix-api-urls.js  fix-import-syntax.js  package-lock.json  package.json  vue.config.js
imageassistant/images/: admin.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
imageassistant/static/: staticfiles.json
imageassistant/templates/: 500.html  about.html  app.html  base.html  contact.html  create_image.html  faq.html  generate_image.html  index.html  privacy_policy.html  searchbox.html  terms_and_conditions.html
imageassistant/users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
nginx/: nginx.conf
production_docker/: Dockerfile
(+142 files in other folders)
