[tool.poetry]
name = "django-nginx-gunicorn-deploy-using-docker-for-aws"
version = "0.1.0"
description = ""
authors = ["Andreas Cormack <cormackandy@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
Django = ">=4.2 , <5.0.6"
python-decouple = "^3.8"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
flower = "^1.0.0"
django-celery-beat = "2.5.0"
django-redis = "^5.4.0"
pillow = "^9.0.0"
boto3 = "^1.18.9"
rembg = "^2.0.49"
django-storages = "^1.14.2"
django-rest-framework = "^0.1.0"
django-components = "0.100"
stripe = "^2.60.0"
whitenoise = "^5.3.0"
opencv-python-headless="4.8.0.76"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
