[project]
name = "imageassistant"
version = "2.0.0"
description = ""
authors = [
    {name = "Andreas Cormack",email = "cormackandy@hotmail.com"}
]
requires-python = ">=3.9"


[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2 , <5.0.6"
python-decouple = "^3.8"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
flower = "^1.0.0"
django-celery-beat = "2.5.0"
django-redis = "^5.4.0"
pillow = "^9.0.0"
boto3 = "^1.18.9"
django-storages = "^1.14.2"
django-rest-framework = "^0.1.0"
stripe = "^2.60.0"
whitenoise = "^5.3.0"
numpy = "^1.24"
opencv-python-headless="4.8.0.76"
django-cors-headers = "^4.0.0"
sentry-sdk = {extras = ["django"], version = "^1.4.3"}
django-compressor = "^4.5.1"
django-template-partials = "^24.4"
django-cms = "^4.1.4"
freezegun = "^1.5.1"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
